--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.3.0
+  flutter_animate: ^4.2.0+1
+  flutter_hooks: ^0.18.6
+  intl: ^0.18.1
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
